[package]
name = "samplers"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.7"
rand = { git = "https://github.com/rust-random/rand" }
rand_distr = { git = "https://github.com/rust-random/rand" }
