[package]
name = "samplers"
version = "0.1.0"
authors = ["ming li <mingyli34@gmail.com>"]
description = "Sample from distributions and calculate summary statistics from the command line."
license = "MIT"
repository = "https://github.com/mingyli/samplers"
edition = "2018"

[dependencies]
atty = "0.2.14"
clap = "2.33.0"
failure = "0.1.7"
itertools = "0.9.0"
rand = "0.7.3"
rand_distr = "0.2.2"

[patch.crates-io]
rand = { git = "https://github.com/rust-random/rand" }
rand_distr = { git = "https://github.com/rust-random/rand" }
