[package]
name = "samplers"
version = "0.1.3"
authors = ["ming li <mingyli34@gmail.com>"]
description = "Sample from distributions and calculate summary statistics from the command line."
license = "MIT"
repository = "https://github.com/mingyli/samplers"
documentation = "https://github.com/mingyli/samplers"
homepage = "https://github.com/mingyli/samplers"
readme = "README.md"
edition = "2018"

[dependencies]
atty = "0.2.14"
clap = "2.33.0"
failure = "0.1.7"
itertools = "0.9.0"
rand = "0.7.3"
rand_distr = "0.2.2"
statrs = "0.12.0"

[patch.crates-io]
rand = { git = "https://github.com/rust-random/rand" }
rand_distr = { git = "https://github.com/rust-random/rand" }
